[gd_scene load_steps=5 format=3 uid="uid://be0m00qmu43tx"]

[ext_resource type="Script" path="res://Scene/commonPanel/giftPanel.gd" id="1_closj"]
[ext_resource type="Theme" uid="uid://bklmr3xmk4m5u" path="res://global_theme.tres" id="2_3i6ns"]
[ext_resource type="Texture2D" uid="uid://ba2q2j3lkloto" path="res://addons/inventory_example/textures/inventories/InventoryBackground.png" id="3_c24ht"]
[ext_resource type="Texture2D" uid="uid://c5t4heqv3a8ff" path="res://Asset/items/礼品箱.png" id="4_nfcuj"]

[node name="Control" type="CanvasLayer"]
script = ExtResource("1_closj")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1408.0
offset_top = -884.0
offset_right = 1584.0
offset_bottom = 728.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 0.827451)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 939.0
offset_top = 552.0
offset_right = 979.0
offset_bottom = 592.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -987.0
offset_top = -258.0
offset_right = 979.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(630.615, 267.699)
theme = ExtResource("2_3i6ns")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="title" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "是否给徐州派赠送礼物,赠送可以增加15点好感度"
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control5" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Control2" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="TextureButton" type="TextureButton" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture_normal = ExtResource("3_c24ht")
ignore_texture_size = true
stretch_mode = 0

[node name="img" type="TextureRect" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/TextureButton"]
layout_mode = 2
offset_left = 11.0
offset_top = 16.5
offset_right = 111.0
offset_bottom = 116.5
texture = ExtResource("4_nfcuj")

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/TextureButton"]
layout_mode = 0
offset_left = 66.0
offset_top = 66.0
offset_right = 119.0
offset_bottom = 123.0
theme_override_font_sizes/font_size = 51
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="bagLabel" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 45.07)
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "
(背包中数量:x3)"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Control3" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Control4" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Control" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="sendGift" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "赠送"

[node name="Control5" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Control3" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="cancel" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[node name="Control4" type="Control" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[connection signal="button_down" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/sendGift" to="." method="_on_send_gift_button_down"]
[connection signal="button_down" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/sendGift" to="." method="_on_rest"]
[connection signal="button_down" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel_button_down"]
[connection signal="button_down" from="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel"]
